k8s/tools/selfhst-icons/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: selfhst-icons-service
  namespace: default
  labels:
    app: selfhst-icons
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: selfhst-icons
